--- a/app/src/main/res/layout-port/activity_admin_profile.xml
+++ b/app/src/main/res/layout-port/activity_admin_profile.xml
@@ -97,6 +97,20 @@
         app:layout_constraintTop_toBottomOf="@+id/switch_from_admin_to_user" />
 
     <Button
+        android:id="@+id/upload_images"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/new_ripple_effect"
+        android:onClick="profileSettings"
+        android:text="Upload Images"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/restore_database" />
+
+    <Button
         android:id="@+id/logout_admin_profile"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -108,7 +122,7 @@
         android:textColor="@color/primaryOne"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/restore_database" />
+        app:layout_constraintTop_toBottomOf="@+id/upload_images" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
