--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -22,6 +22,9 @@
         <item>Full Threshold</item>
         <item>Elisar Zest</item>
         <item>Elisar Fast</item>
+        <item>Custom FT</item>
+        <item>Custom Zest</item>
+        <item>Custom Fast</item>
     </array>
 
     <array name="thirty_dash_two_strategies">
@@ -30,6 +33,9 @@
         <item>Full Threshold</item>
         <item>Elisar Zest</item>
         <item>Elisar Fast</item>
+        <item>Custom FT</item>
+        <item>Custom Zest</item>
+        <item>Custom Fast</item>
     </array>
 
     <array name="ten_dash_two_strategies">
